--- a/blog-starter-app/package.json
+++ b/blog-starter-app/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "glob": "^8.1.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^18.2.0",
